--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Enter name" required/>
+		<br>
+		<label for="email">Email</label>
+		<input type="email" id="email" placeholder="Enter email" required/>
+        <br>
+          <label>Gender</label>
+		<input type="radio" id="male" name="male" value="male">
+		<label for="male">Male</label>
+		<input type="radio" id="female" name="female" value="female">
+		<label for="female">Female</label>
+		<br>
+		<label for="cars">Car Brands</label>
+		<select id="cars">
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Mercedes">Mercedes</option>
+		</select>
+		<br>
+		<label for="carage">Number</label>
+		<input type="number" id="carage" required>
+		<br>
+		<label for="dop">Date of Purchase (dop)</label>
+		<input type="date" id="dop" required>
+		<br>
+		<label for="password">Password</label>
+		<input type="password" id="password" required/>
+			<br>
+			<Button type="submit">Submit Button </Button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
