--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" placeholder="Enter name" required/>
 		<br>
@@ -16,9 +16,9 @@
 		<input type="email" id="email" placeholder="Enter email" required/>
         <br>
           <label>Gender</label>
-		<input type="radio" id="male" name="male" value="male">
+		<input type="radio" id="male" name="gender" value="male">
 		<label for="male">Male</label>
-		<input type="radio" id="female" name="female" value="female">
+		<input type="radio" id="female" name="gender" value="female">
 		<label for="female">Female</label>
 		<br>
 		<label for="cars">Car Brands</label>
